properties de asignar actividad

--- a/tecolotl-web/src/main/resources/profesor.properties
+++ b/tecolotl-web/src/main/resources/profesor.properties
@@ -18,7 +18,7 @@ student.administration.group=grupo
 student.administration.grade=grado
 student.administration.title.students.class=alumnos de la clase
 student.administration.colum.name=nombre
-student.administration.title.passwords=contraseñas
+student.administration.title.passwords=contraseï¿½as
 
 
 
@@ -41,6 +41,19 @@ agregarscv.validate=validar
 agregarscv.sex.m=masculino
 agregarscv.sex.f=femenino
 
+
+#asignar-actividad.xhtml
+assign.activity.title=asignar actividad
+button.temary=temario
+type.your.search=escribe tu b\u00FAsqueda
+show.all=mostrar todo
+activity.level=nivel
+activity.search=buscar
+activity.assign=asignar
+activity.grammar=gram\u00E1tica 
+didactic.guide=gu\u00CDa did\u00E1ctica
+activity.cards=tarjetas
+think-develop.and.share=pensar-desarrollar y compartir
 
 #unicode
 #\u00E1 ï¿½
