--- a/tecolotl-web/src/main/resources/profesor.properties
+++ b/tecolotl-web/src/main/resources/profesor.properties
@@ -18,7 +18,7 @@ student.administration.group=grupo
 student.administration.grade=grado
 student.administration.title.students.class=alumnos de la clase
 student.administration.colum.name=nombre
-student.administration.title.passwords=contraseñas
+student.administration.title.passwords=contraseï¿½as
 
 
 
@@ -40,6 +40,22 @@ agregarscv.student.sex=genero
 agregarscv.validate=validar
 agregarscv.sex.m=masculino
 agregarscv.sex.f=femenino
+
+#tarea-alumno
+tareas.alumno.title=tareas alumno
+tareas.alumno.table.homework=tarea
+tareas.alumno.tabla.assigned=asignaci\u00F3n
+tareas.alumno.title.table=filtros
+tareas.alumno.transcript=transcripci\u00F3n
+tareas.alumno.table.games=word game
+tareas.alumno.map.mental=think-develop and share
+tareas.alumno.map.match=mix\u0022match
+tareas.alumno.map.filling=gap filling
+tareas.alumno.map.happened=what happened
+tareas.alumno.map.comprehension=comprehension match
+
+
+
 
 
 #unicode
