Actualizacion de RESOURCE admin-alumnos.xhtml

--- a/tecolotl-web/src/main/resources/profesor.properties
+++ b/tecolotl-web/src/main/resources/profesor.properties
@@ -11,6 +11,8 @@ dashboard.table.title.not.group=no tiene grupos asigandos en este ciclo escolar
 dashboard.group=grupo
 dashboard.table.schoolgrade=grado
 dashboard.total.students=total alumnos
+
+#admin-alumnos.xhtml
 student.administration.title= administrar alumno
 student.administration.nickname= apodo
 student.administration.mail=correo electronico
@@ -20,7 +22,13 @@ student.administration.title.students.class=alumnos de la clase
 student.administration.colum.name=nombre
 student.administration.title.passwords=contraseñas
 
+#
 
+
+evaluate.developandshare.nickname= apodo
+evaluate.developandshare.mail=correo electronico
+evaluate.developandshare.group=grupo
+evaluate.developandshare.grade=grado
 
 #agregar-csv.xhtml
 agregarcsv.title=agregar estudiante
