Actualizacion de RESOURCE califica-mapamental.xhtml

--- a/tecolotl-web/src/main/resources/etiqueta.properties
+++ b/tecolotl-web/src/main/resources/etiqueta.properties
@@ -19,6 +19,12 @@ logging.forgot.password=olvide mi contrase\u00F1a
 logging.not.account=no tengo una cuenta
 edit=editar
 detail=detalle
+#
+question=pregunta
+reply=respuesta
+commentary=comentario
+
+
 
 
 #no-encontrado.xhtml
