Actualizacion de Calificacion-mapamental y dashboard

--- a/tecolotl-web/src/main/resources/profesor.properties
+++ b/tecolotl-web/src/main/resources/profesor.properties
@@ -21,6 +21,8 @@ student.administration.grade=grado
 student.administration.title.students.class=alumnos de la clase
 student.administration.colum.name=nombre
 student.administration.title.passwords=contrase\u00F1as
+student.administration.error=No hay ciclo escolares asignados o se encuentran inabilitados.
+
 #
 
 
@@ -89,7 +91,7 @@ think-develop.and.share=pensar-desarrollar y compartir
 #lista-mapa-mental.xhtml
 student.administration=administracion de estudiantes
 student.homework=tarea de estudiante
-think-develop.and.share=piensa-desarrolla y comparte
+#think-develop.and.share=piensa-desarrolla y comparte
 assignments.mind.map.tasks=tareas mapa mental asigandas
 finished=respondido
 total.answers=total respestas
