se solucionan 2 incidencias una de letreros de tooltips y el otro de reglas de navegacion en el direccionamiento de profesores.xhtml a dashboard.xhtml en administracion.

--- a/tecolotl-web/src/main/resources/administracion.properties
+++ b/tecolotl-web/src/main/resources/administracion.properties
@@ -38,7 +38,7 @@ schooldetail.contacts.name=nombre
 schooldetail.contacts.type=tipo contacto
 schooldetail.contacts.phone=tel\u00E9fono
 schooldetail.contacts.email=correo electr\u00F3nico
-schooldetail.contacts.tooltip.add=agregar un nuevo contacto
+schooldetail.contacts.tooltip.add=agregar contacto
 schooldetail.lisense.id=id
 schooldetail.lisense.datestart=fecha inicio
 schooldetail.lisense.dateacquisition=fecha adquisici\u00F3n
