se agregan resource booundle

--- a/tecolotl-web/src/main/resources/etiqueta.properties
+++ b/tecolotl-web/src/main/resources/etiqueta.properties
@@ -24,14 +24,15 @@ question=pregunta
 reply=respuesta
 commentary=comentario
 
-
-
-
 #no-encontrado.xhtml
-no.econtrado.title=¡Ups, no encontre la pagina!
-
+no.econtrado.title=¡Ups, no encontre la p\u00E1gina!
+no.encontro.title=P\u00E1gina no encontrada
 #sin-permiso.xhtml
-sin.permiso.title=Estimado usuario, no pudes visitar esta pagina ya que tu rol es: {0}, dar click en el boton para cerrar sesion
+sin.permiso.title=Estimado usuario, no pudes visitar esta p\u00E1gina ya que tu rol es: {0}, dar click en el bot\u00F3n para cerrar sesi\u00F3n
+no.permiso.title=Sin permiso
+#no-manejable.xhtml
+no.manejable.title=Estimado usuario tenemos un inconveniente contacte a su administrador
+no.es.manejable.title=No manejable
 
 #unicode
 #\u00E1 á
