--- a/tecolotl-web/src/main/resources/etiqueta.properties
+++ b/tecolotl-web/src/main/resources/etiqueta.properties
@@ -6,7 +6,7 @@ write.text=escriba texto
 description=descripci\u00F3n
 search=Escriba texto para filtrar...
 pages.total=p\u00E1gina {0, number} de {1,number} : total de filas {2, number}
-status=estatus
+status=estado
 password=contrase\u00F1a
 close.sesion=cerrar sesi\u00F3n
 home=principal
