--- a/tecolotl-web/src/main/resources/administracion.properties
+++ b/tecolotl-web/src/main/resources/administracion.properties
@@ -47,7 +47,7 @@ schooldetail.modal.addcontact.title=agregar Contacto
 schooldetail.modal.updatecontact=modificar contacto
 schooldetail.modal.removecontact.title=eliminar contacto
 schooldetail.modal.removecontact.message=esta seguro que desea borrar al contacto: {0}
-schooldetail.modal.updatelicense.title=actualizar licencia: {0}
+schooldetail.modal.updatelicense.title=actualizar licencia
 schooldetail.modal.deletelicense.title=eliminar licencia n\u00FAmero: {0}
 
 catalogoadministrativo.title=cat\u00E1logos
