Muestra de forma correcta la lista de los alumnos por escuela

--- a/tecolotl-web/src/main/resources/administracion.properties
+++ b/tecolotl-web/src/main/resources/administracion.properties
@@ -14,7 +14,7 @@ dashboard.modalbloqueo.title=bloquear escuela: {0}
 dashboard.modalremove.title=eliminar escuela: {0}
 dashboard.modalremove.message=Are you sure you want to delete this school?: {0}, Once deleted you cannot\u00E1 recover\
   Data related to this school.
-dashboard.search.tooltip.enable=b\u00FAsqueda por CCT o por nombre de escuela
+dashboard.search.tooltip.enable=b\u00FAsqueda por CCT o por nombre de escuela, la b\u00FAsqueda es sensible a may\u00FAculas y min\u00FAsculas
 dashboard.search.tooltip.diseble=no hay escuelas registradas
 dashboard.busqueda.cct=seleccione la CCT para ver detalles
 dashboard.validation.cct=la escuela ya axiste
