se actualizo el diccionario de palabras del archivo profesor.properties

--- a/tecolotl-web/src/main/resources/profesor.properties
+++ b/tecolotl-web/src/main/resources/profesor.properties
@@ -70,7 +70,7 @@ calificacion.gramatica.grouo=detalle grupo
 calificacion.gramatica.score=calificacion
 calificacion.gramatica.not.answer=sin respuesta
 calificacion.gramatica.not.homework=tareas incompletas
-calificacion.gramatica.message.error=al parecer este estudiante no ha terminado de resolver sus todas sus tareas, Esta seguro que desea calificar dichos ejercicios?
+calificacion.gramatica.message.error=al parecer este estudiante no ha terminado de resolver todas sus tareas, Esta seguro que desea calificar dichos ejercicios?
 
 #asignar-actividad.xhtml
 assign.activity.title=asignar actividad
