ciclo escolar: activa - desactiva

--- a/tecolotl-web/src/main/resources/boton.properties
+++ b/tecolotl-web/src/main/resources/boton.properties
@@ -6,7 +6,7 @@ detail=detalles
 edit=editar
 remove=eliminar
 block=bloquear
-active=activar profesor
+active=activar
 next=siguiente
 back=atr\u00E1s
 clean=limpiar
