--- a/tecolotl-web/src/main/resources/boton.properties
+++ b/tecolotl-web/src/main/resources/boton.properties
@@ -23,6 +23,8 @@ download=descargar
 report=reporte
 
 evaluate=evaluar
+qualify= calificar
+see.rating.details=ver detalles de calificaci\u00F3n
 
 
 
