se resuelven incidencias en traducir un modal de calificacion-mapamental

--- a/tecolotl-web/src/main/resources/profesor.properties
+++ b/tecolotl-web/src/main/resources/profesor.properties
@@ -104,6 +104,7 @@ deficit=deficiente
 regular=regular
 good=bueno
 excellent=excelente
+you.need.to.write.a.comment.before.submitting.the.rating = es necesario escribir un comentario antes de enviar la calificación
 
 
 #unicode
