se da de alta la traduccion de se necesita un valor

--- a/tecolotl-web/src/main/resources/alumno.properties
+++ b/tecolotl-web/src/main/resources/alumno.properties
@@ -102,6 +102,8 @@ more.activity.help.message.match.image=relaciona las palabras con la imagen
 more.activity.help.message.select.word=seleccione una palabra para completar oraci\u00F3n
 #biblioteca libre
 
+ups.you.missed.somenthing=se necesita un valor
+
 
 #unicode
 #\u00E1 á
