cambio csv agregar

--- a/tecolotl-web/src/main/resources/profesor.properties
+++ b/tecolotl-web/src/main/resources/profesor.properties
@@ -96,8 +96,7 @@ total.answers=total respuestas
 #no-grupo.xhtml
 no.grupo.title=este no es su grupo
 no.grupo.message=este grupo no ha sido asignado a usted
-no.grupo.=
-no.grupo.=
+
 
 #calificacion-mapamental.xhtml
 deficit=deficiente
@@ -108,6 +107,14 @@ you.need.to.write.a.comment.before.submitting.the.rating = es necesario escribir
 
 you.need.to.select.an.activity=es necesario seleccionar una actividad
 modal.confirma=Al parecer hay alumnos sin asginar actvidad, desea asignar la(s) actvidad(es) seleccionada(s)
+
+#=======================================================================
+# MENSAJES AGREGAR ALUMNO CSV
+
+csv.nickname=El apodo debe tener minimo 4 caracteres o ya existe
+csv.date=El formato dede ser dd/mm/yyyy
+csv.level=A1,A2,B1,B2,C1,C2 valores permitidos
+csv.gender=deber ser M o F
 
 
 #unicode
