--- a/pom.xml
+++ b/pom.xml
@@ -176,6 +176,19 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+        <plugins>
+        	<plugin>
+        		<groupId>org.jboss.as.plugins</groupId>  
+				<artifactId>jboss-as-maven-plugin</artifactId>  
+				<version>7.5.Final</version>
+				  <configuration>  
+				     <hostname>localhost</hostname>  
+				     <port>9990</port>  
+				     <name>usario</name>  
+				     <password>1234</password>  
+				  </configuration>  
+        	</plugin>
+        </plugins>
     </build>
 
     <modules>
