cuando berras una tarea ahora los hace desde la base datos

--- a/tecolotl-web/src/main/resources/profesor.properties
+++ b/tecolotl-web/src/main/resources/profesor.properties
@@ -62,7 +62,7 @@ tareas.alumno.map.match=mix\u0022match
 tareas.alumno.map.filling=gap filling
 tareas.alumno.map.happened=what happened
 tareas.alumno.map.comprehension=comprehension match
-
+tareas.alumno.delete.message=esta seguro que desea eliminar esta tarea, se eliminaran todos los avances previos del alumno
 
 #calificacion-gramatica
 calificacion.gramatica.title=word game
