se cambiaron crearon bundle de botones y me mensajes para modal eliminar una actividad, tambien se corriegieron estilos en las diferentes vistas de profesor

--- a/tecolotl-web/src/main/resources/boton.properties
+++ b/tecolotl-web/src/main/resources/boton.properties
@@ -16,7 +16,7 @@ homework=realizar tarea
 do.homework=realizar tarea
 end=terminar
 ready=\u00A1Listo!
-
+close=cerrar
 #Vista admin-alumnos.xhtml
 passwords=contrase\u00F1as
 download=descargar
