--- a/tecolotl-web/src/main/resources/profesor.properties
+++ b/tecolotl-web/src/main/resources/profesor.properties
@@ -11,7 +11,7 @@ dashboard.table.title.not.group=no tiene grupos asigandos en este ciclo escolar
 dashboard.group=grupo
 dashboard.table.schoolgrade=grado
 dashboard.total.students=total alumnos
-
+dashboard.delete.activity=Est\u00E1 seguro que desea eliminar esta actividad?
 #admin-alumnos.xhtml
 student.administration.title= administrar alumno
 student.administration.nickname= apodo
@@ -115,6 +115,8 @@ csv.nickname=El apodo debe tener minimo 4 caracteres o ya existe
 csv.date=El formato dede ser dd/mm/yyyy
 csv.level=A1,A2,B1,B2,C1,C2 valores permitidos
 csv.gender=deber ser M o F
+
+
 
 
 #unicode
