mensaje de los alumnos score

--- a/tecolotl-web/src/main/resources/alumno.properties
+++ b/tecolotl-web/src/main/resources/alumno.properties
@@ -19,6 +19,7 @@ dashboard.homework.done=tareas realizadas
 dashboard.not.homework=No hay tareas asignadas
 dashboard.empty=vacio
 dashboard.score=calificaci\u00F3n
+dashboard.no.answer=sin responder
 
 #activities
 #Navigation bar
@@ -31,7 +32,7 @@ activities.title.match.sentence.question=pregunta
 activities.title.match.sentence.answer=respuesta
 #Ordenar palabras
 #login
-login.valid.password=Estimado usuario, de favor seleccionar una contraseña
+login.valid.password=Estimado usuario, de favor seleccionar una contraseï¿½a
 activities.title.order.words=ordenar palabaras
 activities.word.order.instruction.title=ordena las palabras para formar oraciones correctas
 
@@ -43,7 +44,7 @@ activities.title.comple.all.sentences=completa las oraciones
 # Ordenar palabras
 title.description.order.words=ordenar palabras
 #Mensaje ver cideo completo
-activities.title.description.please.watch.the=¡por favor mira el
+activities.title.description.please.watch.the=ï¿½por favor mira el
 title.description.full.video=video completo!
 #mensaje contestar transcript
 title.description.full.request=Necesitas llenar todas las respuestas
@@ -106,12 +107,12 @@ more.activity.help.message.select.word=seleccione una palabra para completar ora
 
 
 #unicode
-#\u00E1 á
-#\u00E9 é
-#\u00ED í
-#\u00F3 ó
-#\u00FA ú
-#\u00BF ¿
-#\u0148 ñ
+#\u00E1 ï¿½
+#\u00E9 ï¿½
+#\u00ED ï¿½
+#\u00F3 ï¿½
+#\u00FA ï¿½
+#\u00BF ï¿½
+#\u0148 ï¿½
 
 
