se hace la traduccion de subir o bajar nivel en el dashboard profesor

--- a/tecolotl-web/src/main/resources/profesor.properties
+++ b/tecolotl-web/src/main/resources/profesor.properties
@@ -115,6 +115,7 @@ csv.nickname=El apodo debe tener minimo 4 caracteres o ya existe
 csv.date=El formato dede ser dd/mm/yyyy
 csv.level=A1,A2,B1,B2,C1,C2 valores permitidos
 csv.gender=deber ser M o F
+msj.nivel=se incremento el nivel correctamente  
 
 
 
