--- a/tecolotl-web/src/main/resources/profesor.properties
+++ b/tecolotl-web/src/main/resources/profesor.properties
@@ -116,6 +116,8 @@ csv.date=El formato dede ser dd/mm/yyyy
 csv.level=A1,A2,B1,B2,C1,C2 valores permitidos
 csv.gender=deber ser M o F
 msj.nivel=se incremento el nivel correctamente  
+sube.nivel=¿Estás seguro de que quieres mover a este estudiante? No todas las actividades de nivel se han logrado.
+msj.termina=Para calificar esto, un 80% de las tareas deben ser respondidas
 
 
 
