Muestra las respuesta de mix and match de forma correcta

--- a/tecolotl-ear/pom.xml
+++ b/tecolotl-ear/pom.xml
@@ -58,6 +58,7 @@
 						<webModule>
 							<groupId>tecolotl</groupId>
 							<artifactId>tecolotl-web</artifactId>
+							<contextRoot>tecolotl</contextRoot>
 						</webModule>
 					</modules>
 				</configuration>
