muestra de forma correcta el nivel del estudiante

--- a/tecolotl-web/src/main/resources/profesor.properties
+++ b/tecolotl-web/src/main/resources/profesor.properties
@@ -120,4 +120,4 @@ sube.nivel=¿Estás seguro de que quieres mover a este estudiante? No todas las 
 msj.termina=Para calificar esto, un 80% de las tareas deben ser respondidas
 
 #buzon
-buzon.mesage.info=El alumno {0} a subido de nivel a {1} ya que cumplio con las reglas {2}
+buzon.mesage.info=El alumno {0} a subido de nivel a {1} ya que cumplio con las reglas: Promedio minimo de 8.5 y 18 actividades
