Muestra los detalles del grupo

--- a/tecolotl-web/src/main/webapp/WEB-INF/web.xml
+++ b/tecolotl-web/src/main/webapp/WEB-INF/web.xml
@@ -64,12 +64,10 @@
 	<context-param>
 		<description>Multiples archivos de configuración para la navegación</description>
 		<param-name>javax.faces.CONFIG_FILES</param-name>
-		<param-value>
-			/WEB-INF/faces-config.xml,
-			/WEB-INF/alumno/reglas-navegacion.xml,
-			/WEB-INF/profesor/reglas-navegacion.xml,
-			/WEB-INF/administracion/reglas-navegacion.xml
-		</param-value>
+		<param-value>/WEB-INF/faces-config.xml,
+            /WEB-INF/alumno/reglas-navegacion.xml,
+            /WEB-INF/profesor/reglas-navegacion.xml,
+            /WEB-INF/administracion/reglas-navegacion.xml,/WEB-INF/coordinador/reglas-navegacion.xml</param-value>
 	</context-param>
 
 	<session-config>
