se le dio estilos a toda vista de buzon.xhtml

--- a/tecolotl-web/src/main/resources/profesor.properties
+++ b/tecolotl-web/src/main/resources/profesor.properties
@@ -120,4 +120,7 @@ sube.nivel=¿Estás seguro de que quieres mover a este estudiante? No todas las 
 msj.termina=Para calificar esto, un 80% de las tareas deben ser respondidas
 
 #buzon
-buzon.mesage.info=El alumno {0} a subido de nivel a {1} ya que cumplio con las reglas: Promedio minimo de 8.5 y 18 actividades
+buzon.mesage.info=El alumno <span>{0}</span> a subido de nivel a <span>{1}</span> ya que cumplio con las reglas: Promedio minimo de 8.5 y 18 actividades
+mail.box=buz\u00F3n
+buzon.mesage=buzon de mensaje
+buzon.read=leido
