Mapeo de titulos modulo coordinador, vista dashboard.xhtml

--- a/tecolotl-web/src/main/resources/administracion.properties
+++ b/tecolotl-web/src/main/resources/administracion.properties
@@ -1,4 +1,4 @@
-dashboard.titulo=schools
+dashboard.title=schools
 dashboard.modal.add.title=add school
 dashboard.modal.update.title=update school
 dashboard.modal.cct=cct
