--- a/tecolotl-web/src/main/resources/administracion.properties
+++ b/tecolotl-web/src/main/resources/administracion.properties
@@ -1,6 +1,6 @@
-dashboard.title=schools
-dashboard.modal.add.title=add school
-dashboard.modal.update.title=update school
+dashboard.title=escuela
+dashboard.modal.add.title=agregar escuela
+dashboard.modal.update.title=actualizar escuela
 dashboard.modal.cct=cct
 dashboard.modal.name=name
 dashboard.modal.zipcode=c\u00F3digo postal
@@ -41,7 +41,7 @@ schooldetail.contacts.email=correo electr\u00F3nico
 schooldetail.contacts.tooltip.add=agregar contacto
 schooldetail.lisense.id=id
 schooldetail.lisense.datestart=fecha inicio
-schooldetail.lisense.dateacquisition=fecha adquisici\u00F3n
+schooldetail.lisense.dateacquisition=fecha adquisici\u00F3nmenu.schools
 schooldetail.lisense.tooltip.add=agregar licencia
 schooldetail.modal.addcontact.title=agregar Contacto
 schooldetail.modal.updatecontact=modificar contacto
