--- a/tecolotl-web/src/main/resources/coordinador.properties
+++ b/tecolotl-web/src/main/resources/coordinador.properties
@@ -8,6 +8,7 @@ dashboard.table.student=Total alumno
 dashboard.table.options=Opciones
 dashboard.table.login=login
 dashboard.table.general=promedio general grupo
+dashboard.table.detail.grup=detalle grupo
 dashboard.table.missing.videos=Tareas Faltantes
 #Navegador lateral
 #Etiquetas
@@ -17,6 +18,7 @@ menu.detail=detalles
 menu.report=Reporte sesi\u00F3n
 #tabla sin seleccionar
 teacher.detail.table.unselected.title=no seleccionado
+teacher.detail.table.grup=grupo:
 teacher.detail.table.unselected.name=nombre
 teacher.detail.table.unselected.options=opciones
 #Tabla detalle profesor
@@ -28,8 +30,6 @@ teacher.detail.table.activities=actividades sin contestar
 teacher.detail.table.activities.activities=actividades
 teacher.detail.table.activities.without.answering=sin contestar
 teacher.detail.table.activities.total=totales
-
-
 teacher.detail.table.grup.nivel=nivel
 teacher.detail.table.grup.average=promedio
 teacher.detail.table.grup.video=total de v\u00EDdeos
@@ -37,15 +37,12 @@ teacher.detail.table.grup.student=nombre de alumno
 teacher.detail.table.grup.platform.time=tiempo en plataforma
 #Tabla promedio-actividades
 teacher.detail.table.student.activities=actividades
-teacher.detail.table.student.average=Promedio
-
+teacher.detail.table.student.average=Promedio:
 teacher.detail.title=detalles grupo
 teacher.detail.no=N/A
-
-
-
 Etiquetas
 dashboard.table.detail=detalle
+
 
 report.sesion.to=hasta
 report.sesion.connection.time=tiempo de conexi\u00F3n
