Mapeo de titulos modulo coordinador, vista reporte-sesion.xhtml

--- a/tecolotl-web/src/main/resources/coordinador.properties
+++ b/tecolotl-web/src/main/resources/coordinador.properties
@@ -16,6 +16,7 @@ menu.schools=escuelas
 menu.menu=Men\u00FA
 menu.detail=detalles
 menu.report=Reporte sesi\u00F3n
+report.sesion.to=hasta
 #tabla sin seleccionar
 teacher.detail.table.unselected.title=no seleccionado
 teacher.detail.table.grup=grupo:
@@ -44,9 +45,9 @@ Etiquetas
 dashboard.table.detail=detalle
 
 
-report.sesion.to=hasta
-report.sesion.connection.time=tiempo de conexi\u00F3n
-report.sesion.total.hours=total horas
+
+report.sesion.connection.time=tiempo de conexi\u00F3n:
+report.sesion.total.hours=total horas:
 report.sesion.table.date=fecha
 report.sesion.table.start=inicio
 report.sesion.table.end=cierre
