Mapeo de titulos modulo profesor, vista detalle-profesor/admin-alumnos/tarea-alumnos

--- a/tecolotl-web/src/main/resources/profesor.properties
+++ b/tecolotl-web/src/main/resources/profesor.properties
@@ -22,6 +22,8 @@ student.administration.title.students.class=alumnos de la clase
 student.administration.colum.name=nombre
 student.administration.title.passwords=contrase\u00F1as
 student.administration.error=No hay ciclo escolares asignados o se encuentran inabilitados.
+student.administration.message.three.columns=10/10/1 -> reactivos contestados / reactivos totales / reactivos calificados
+student.administration.message.two.columns=10/10 -> reactivos respondidos / reactivos totales
 
 #
 
@@ -92,6 +94,10 @@ student.homework=tarea de estudiante
 assignments.mind.map.tasks=tareas mapa mental asigandas
 finished=respondido
 total.answers=total respuestas
+total.filters.assigned=Tareas asignadas:
+total.filters.task=Tareas promediadas:
+total.filters.average=Promedio general:
+
 
 #no-grupo.xhtml
 no.grupo.title=este no es su grupo
