--- a/tecolotl-web/src/main/resources/administracion.properties
+++ b/tecolotl-web/src/main/resources/administracion.properties
@@ -41,7 +41,7 @@ schooldetail.contacts.email=correo electr\u00F3nico
 schooldetail.contacts.tooltip.add=agregar contacto
 schooldetail.lisense.id=id
 schooldetail.lisense.datestart=fecha inicio
-schooldetail.lisense.dateacquisition=fecha adquisici\u00F3nmenu.schools
+schooldetail.lisense.dateacquisition=fecha adquisici\u00F3n
 schooldetail.lisense.tooltip.add=agregar licencia
 schooldetail.modal.addcontact.title=agregar Contacto
 schooldetail.modal.updatecontact=modificar contacto
