Agrego titulo de "opciones" para todas las tablas.

--- a/tecolotl-web/src/main/resources/administracion.properties
+++ b/tecolotl-web/src/main/resources/administracion.properties
@@ -28,6 +28,9 @@ dashboard.header.coor=coordinadores asignados
 dashboard.notification.notfound=no se encontraron resultados que coincidan con la b\u00FAsqueda
 dashboard.school.notselected=escuela no seleccionada
 
+#Etiqueta
+title.all.tables.column.options=opciones
+title.all.tables.column.password=contrase\u0148a
 #Detalle escuela
 schooldetail.title=datos escuela
 schooldetail.licensetotal=total de licencias
@@ -49,7 +52,6 @@ schooldetail.modal.removecontact.title=eliminar contacto
 schooldetail.modal.removecontact.message=esta seguro que desea borrar al contacto: {0}
 schooldetail.modal.updatelicense.title=actualizar licencia
 schooldetail.modal.deletelicense.title=eliminar licencia n\u00FAmero: {0}
-
 catalogoadministrativo.title=cat\u00E1logos
 #Vista Catalogo Coordinador/Profesor
 catalogocoordinador.coordinatorcatalog=bloqueo coordinador
@@ -116,7 +118,6 @@ csvimportar.active.table.header.name=nombre
 csvimportar.active.table.header.last.name=apellido paternno
 csvimportar.active.table.header.mothers.last=apellido materno
 csvimportar.active.table.header.email=correo electronico
-csvimportar.active.table.header.password=contrase\u0148a
 
 #Vista Destalle profesor
 detalleprofesor.professor.table.title=administracion de profesores
@@ -124,7 +125,7 @@ detalleprofesor.teache.table.header.name= nombre profesor
 detalleprofesor.teache.table.header.number.of.groups= No. de grupos
 detalleprofesor.teache.table.header.assigned.task= tarea asignada
 detalleprofesor.teache.table.header.task.to.be.assigned= tarea por asignar
-detalleprofesor.teache.table.header.option= opciones
+
 #Modal Nuevo-Prefesor
 detalleprofesor.professor.modal.title=administracion de profesores
 detalleprofesor.professor.modal.title.new.teacher=nuevo profesor
