Cambio de resource boulder "_en" a un archivo por default se agregaron archivos nuevos "otrosboton.properties" y "otrosetiqueta.properties"  se remapeo todos los archivos .xhtml  de modulos Coordinador y Administrador.

--- a/tecolotl-web/src/main/resources/administracion.properties
+++ b/tecolotl-web/src/main/resources/administracion.properties
@@ -2,7 +2,7 @@ dashboard.title=escuela
 dashboard.modal.add.title=agregar escuela
 dashboard.modal.update.title=actualizar escuela
 dashboard.modal.cct=cct
-dashboard.modal.name=name
+dashboard.modal.name=nombre
 dashboard.modal.zipcode=c\u00F3digo postal
 dashboard.modal.colony=colonia
 dashboard.modal.street=street
@@ -31,8 +31,15 @@ dashboard.school.notselected=escuela no seleccionada
 #Etiqueta
 title.all.tables.column.options=opciones
 title.all.tables.column.password=contrase\u0148a
+label.search=escribe un texto para buscar
+label.select=seleccione una opci\u00F3n
+
+
 #Detalle escuela
-schooldetail.title=datos escuela
+
+schooldetail.student.lock=bloqueo alumno
+schooldetail.blocking.others=bloqueo otros
+schooldetail.title=escuela
 schooldetail.licensetotal=total de licencias
 schooldetail.licenses=licencias
 schooldetail.contacts=contacto escuelas
@@ -62,10 +69,17 @@ catalogocoordinador.title=coordinadores
 catalogocoordinador.coordinator.block.table.header.id=Id
 catalogocoordinador.coordinator.block.table.header.name=nombre
 catalogocoordinador.coordinator.block.table.header.edit=editar
-catalogocoordinador.coordinator.detail.table.header.nick=nick name
+catalogocoordinador.coordinator.detail.table.header.nick=apodo
 catalogocoordinador.coordinator.detail.table.header.email=correo electr\u00F3nico
 catalogocoordinador.coordinator.detail.table.header.status=estatus
 catalogocoordinador.coordinator.detail.table.header.licenses=licencias
+
+
+#Tabla profesor
+profesor.detail.table.header.nick=apodo
+profesor.detail.table.header.name=nombre
+profesor.detail.table.header.email=correo electr\u00F3nico
+profesor.detail.table.header.password=contrase\u0148a
 
 #modal nuevo-coordinador
 detallecoordinador.coordinator.modal.title.new.coordinator=nuevo coordinador
@@ -74,9 +88,9 @@ detallecoordinador.coordinator.active.modal.last.name=apellido paterno
 detallecoordinador.coordinator.active.modal.mothers.last=apellido materno
 
 #Tabla profesor
-catalogocoordinador.teacher.block.table.header.id=Id
-catalogocoordinador.teacher.block.table.header.name=Nombre
-catalogocoordinador.teacher.block.table.header.edit=Editar
+catalogocoordinador.teacher.block.table.header.id=id
+catalogocoordinador.teacher.block.table.header.name=nombre
+catalogocoordinador.teacher.block.table.header.edit=editar
 
 #modal-editar
 catalogocoordinador.modal.editar=editar bloqueo
@@ -107,7 +121,8 @@ catalogoadministrativo.school.table.cct=cct
 catalogoadministrativo.school.table.name=nombre
 catalogoadministrativo.school.table.active=activo
 catalogoadministrativo.school.table.licenses=licencias
-catalogoadministrativo.school.table.remaining.days=dias restantes
+catalogoadministrativo.school.table.remaining.days=d\u00EDas restantes
+catalogoadministrativo.school.table.galaxy=galaxia
 
 #Vista csvimportar
 csvimportar.active.administrator.import.csv.teachers=Importar Profesores CSV
