--- a/tecolotl-web/src/main/resources/boton.properties
+++ b/tecolotl-web/src/main/resources/boton.properties
@@ -1,39 +1,25 @@
-accept=aceptar
-cancel=cancelar
-add=agregar
-search=buscar
-detail=detalles
-edit=editar
-remove=eliminar
-block=bloquear
-active=activar
-next=siguiente
-back=atr\u00E1s
-clean=limpiar
-update=actualizar
-submit=enviar
-homework=realizar tarea
-do.homework=realizar tarea
-end=terminar
-ready=\u00A1Listo!
-close=cerrar
-#Vista admin-alumnos.xhtml
-passwords=contrase\u00F1as
-download=descargar
-report=reporte
-
-evaluate=evaluar
-qualify= calificar
-see.rating.details=ver detalles de calificaci\u00F3n
-
-
-
-
-#unicode
-#\u00E1 á
-#\u00E9 é
-#\u00ED í
-#\u00F3 ó
-#\u00FA ú
-#\u00BF ¿
-#\u00A1 ¡
+accept=accept
+cancel=cancel
+add=add
+search=search
+detail=details
+edit=edit
+remove=delete
+block=block
+active=activate
+next=next
+back=back
+clean=clear
+update=update
+submit=send
+homework= go to HW
+do.homework=go to HW
+end=finish
+passwords=passwords
+report=report
+download=download
+evaluate=evaluate
+qualify=grade this!
+see.rating.details=watch scores
+close=close
+ready=ready!
