--- a/tecolotl-web/src/main/resources/etiqueta.properties
+++ b/tecolotl-web/src/main/resources/etiqueta.properties
@@ -1,46 +1,38 @@
-menu=men\u00FA
-options=opciones
-select=seleccione una opci\u00F3n
-word.key=palabra clave
-write.text=escriba texto
-description=descripci\u00F3n
-search=Escriba texto para filtrar...
-pages.total=p\u00E1gina {0, number} de {1,number} : total de filas {2, number}
-status=estado
-password=contrase\u00F1a
-close.sesion=cerrar sesi\u00F3n
-home=principal
-correo.electronico=correo electronico
-logging.registry=registro
-logging.teacher=profesor
-logging.student=alumno
-logging.nickname=apodo
-logging.forgot.password=olvide mi contrase\u00F1a
-logging.not.account=no tengo una cuenta
-edit=editar
-detail=detalle
+menu=menu
+options=options
+select=select an option
+word.key=key word
+write.text=write a text
+description=description
+search=write a text to seek...
+pages.total=pages {0, number} of {1,number} : total of lines {2, number}
+status=status
+password=password
+close.sesion=close session
+home=home
+correo.electronico=email
+logging.registry=registry
+logging.teacher=professor
+logging.student=student
+logging.nickname=nickname
+logging.forgot.password=forgot password
+logging.not.account=already registered
+edit=edit
+detail=detail
 #
-question=pregunta
-reply=respuesta
-commentary=comentario
+question=question
+reply=reply
+commentary=commentary
 
 #no-encontrado.xhtml
-no.econtrado.title=¡Ups, no encontre la p\u00E1gina!
-no.encontro.title=P\u00E1gina no encontrada
+no.econtrado.title=ups, something went wrong!
+no.encontro.title=page not found
 #sin-permiso.xhtml
-sin.permiso.title=Estimado usuario, no pudes visitar esta p\u00E1gina ya que tu rol es: {0}, dar click en el bot\u00F3n para cerrar sesi\u00F3n
-no.permiso.title=Sin permiso
+sin.permiso.title=dear user you have no access to this page due to your role: {0}, click to close session
+no.permiso.title=without permission
 #no-manejable.xhtml
 no.manejable.title=Estimado usuario tenemos un inconveniente contacte a su administrador
-no.es.manejable.title=No manejable
+no.es.manejable.title=not manageable
 
 validation.future.date=future date
 validacion.past.date=past date
-
-#unicode
-#\u00E1 á
-#\u00E9 é
-#\u00ED í
-#\u00F3 ó
-#\u00FA ú
-#\u00BF ¿
