barra lateral izquierda administracion alumnos sobrepasados

--- a/tecolotl-web/src/main/resources/administracion.properties
+++ b/tecolotl-web/src/main/resources/administracion.properties
@@ -27,6 +27,8 @@ dashboard.header.teacher=profesores asignados
 dashboard.header.coor=coordinadores asignados
 dashboard.notification.notfound=no se encontraron resultados que coincidan con la b\u00FAsqueda
 dashboard.school.notselected=escuela no seleccionada
+dashboard.days.licences=dias licencias
+dashboard.extra.alumns=alumnos
 
 #Etiqueta
 title.all.tables.column.options=opciones
