Cambio de resource boulder "_en" a un archivo por default se agregaron archivos nuevos "otrosboton.properties" y "otrosetiqueta.properties"  se remapeo todos los archivos .xhtml  de modulos Coordinador y Administrador.

--- a/tecolotl-web/src/main/resources/administracion.properties
+++ b/tecolotl-web/src/main/resources/administracion.properties
@@ -37,6 +37,7 @@ label.search=escribe un texto para buscar
 label.select=seleccione una opci\u00F3n
 
 
+
 #Detalle escuela
 
 schooldetail.student.lock=bloqueo alumno
@@ -78,6 +79,7 @@ catalogocoordinador.coordinator.detail.table.header.licenses=licencias
 
 
 #Tabla profesor
+profesor.detail.table.title=profesores
 profesor.detail.table.header.nick=apodo
 profesor.detail.table.header.name=nombre
 profesor.detail.table.header.email=correo electr\u00F3nico
