--- a/tecolotl-web/src/main/resources/coordinador.properties
+++ b/tecolotl-web/src/main/resources/coordinador.properties
@@ -36,9 +36,11 @@ teacher.detail.table.grup.average=promedio
 teacher.detail.table.grup.video=total de v\u00EDdeos
 teacher.detail.table.grup.student=nombre de alumno
 teacher.detail.table.grup.platform.time=tiempo en plataforma
+teacher.detail.table.grup.footer.message=Total de videos: Numero total de videos asignados al alumno en su nivel actual. 
 #Tabla promedio-actividades
 teacher.detail.table.student.activities=actividades
 teacher.detail.table.student.average=Promedio:
+teacher.detail.table.student.average.video=sin v\u00EDdeos
 teacher.detail.title=detalles grupo
 teacher.detail.no=N/A
 Etiquetas
