se agrega contraseña modal agregar profesor con un tiempo de accion

--- a/tecolotl-web/src/main/resources/profesor.properties
+++ b/tecolotl-web/src/main/resources/profesor.properties
@@ -30,8 +30,8 @@ student.administration.title.students.class=students
 student.administration.colum.name=name
 student.administration.title.passwords=Password
 student.administration.error=Ther's no school year.
-student.administration.message.three.columns=10/10/1 -> answered/total assigned/graded
-student.administration.message.two.columns=10/10 -> answered/total assigned
+student.administration.message.three.columns=answered/total assigned/graded
+student.administration.message.two.columns=answered/total assigned
 passwords=Passwords
 download=Download
 report=Report
