Cambio de resource boulder "_en" a un archivo por default se agregaron archivos nuevos "otrosboton.properties" y "otrosetiqueta.properties"  se remapeo todos los archivos .xhtml  de modulos Administrador.

--- a/tecolotl-web/src/main/resources/administracion.properties
+++ b/tecolotl-web/src/main/resources/administracion.properties
@@ -141,9 +141,15 @@ csvimportar.active.table.header.email=correo electronico
 #Vista Destalle profesor
 detalleprofesor.professor.table.title=administracion de profesores
 detalleprofesor.teache.table.header.name= nombre profesor
+
 detalleprofesor.teache.table.header.number.of.groups= No. de grupos
 detalleprofesor.teache.table.header.assigned.task= tarea asignada
 detalleprofesor.teache.table.header.task.to.be.assigned= tarea por asignar
+detalleprofesor.teacher.table.nickname= apodo
+detalleprofesor.teacher.table.name=Nombre
+detalleprofesor.teacher.table.password=contrase\u0148a
+detalleprofesor.teacher.table.email=correo electronico
+detalleprofesor.teacher.table.options=opciones
 
 #Modal Nuevo-Prefesor
 detalleprofesor.professor.modal.title=administracion de profesores
@@ -157,6 +163,13 @@ detalleprofesor.active.modal.header.email=correo electronico
 detalleprofesor.active.modal.new.teacher.grup=grupo
 detalleprofesor.active.modal.new.teacher.degree=grado
 detalleprofesor.active.modal.header.password=contrase\u0148a
+detalleprofesor.active.modal.remove.confirmation= \u00BF Esta serguro de eliminar al profesor: {0} ?
+detalleprofesor.active.modal.remove=Eliminar Profesor
+detalleprofesor.active.modal.cannot.remove=\u0021 No se puede Eliminar al profesor por que tiene {0} grupos asignado!
+
+detallecoordinador.active.modal.remove=elimiar coordinador
+detallecoordinador.active.modal.remove.confirmation=esta seguro que desea borrar al contacto:
+detallegrupo.active.modal.remove=borrar grupo
 
 #profesores
 profesores.borrargrupo=esta seguro que desea eliminar el grupo {0} {1}
