--- a/tecolotl-web/src/main/resources/otrosboton.properties
+++ b/tecolotl-web/src/main/resources/otrosboton.properties
@@ -20,6 +20,7 @@ close=cerrar
 #Vista admin-alumnos.xhtml
 passwords=contrase\u00F1as
 download=descargar
+download.PDF=descargar PDF
 report=reporte
 
 evaluate=evaluar
