--- a/tecolotl-web/src/main/resources/otrosetiqueta.properties
+++ b/tecolotl-web/src/main/resources/otrosetiqueta.properties
@@ -13,6 +13,7 @@ home=principal
 correo.electronico=correo electronico
 logging.registry=registro
 logging.teacher=profesor
+teachers=Profesores
 logging.student=alumno
 logging.nickname=apodo
 logging.forgot.password=olvide mi contrase\u00F1a
@@ -36,6 +37,15 @@ no.es.manejable.title=No manejable
 
 validation.future.date=future date
 validacion.past.date=past date
+unpaid.surplus=excedente no pagado
+grade=grado
+group=grupo
+groups=grupos
+reassign.group=reasignar grupo
+
+
+
+
 
 #unicode
 #\u00E1 á
