Cambio de resource boulder profesor.properties "assigned HW"

--- a/tecolotl-web/src/main/resources/profesor.properties
+++ b/tecolotl-web/src/main/resources/profesor.properties
@@ -109,7 +109,7 @@ student.homework=HW
 assignments.mind.map.tasks=Graphic organizers tasks
 finished=answered
 total.answers=total
-total.filters.assigned=HW asignado:
+total.filters.assigned=assigned HW :
 total.filters.task=TASK count:
 total.filters.average=Grade average:
 
