Cambio de resource boulder coordinador.properties  "Video"

--- a/tecolotl-web/src/main/resources/coordinador.properties
+++ b/tecolotl-web/src/main/resources/coordinador.properties
@@ -25,7 +25,7 @@ teacher.detail.table.unselected.options=opciones
 #Tabla detalle profesor
 teacher.detail.table.school.grade=grado
 teacher.detail.table.school.grup=grupo
-teacher.detail.table.assigned.homework=v\u00EDdeos asignados
+teacher.detail.table.assigned.homework=videos asignados
 teacher.detail.table.pending.by.rating=pendientes por calificar
 teacher.detail.table.activities=actividades sin contestar
 teacher.detail.table.activities.activities=actividades
@@ -33,14 +33,14 @@ teacher.detail.table.activities.without.answering=sin contestar
 teacher.detail.table.activities.total=totales
 teacher.detail.table.grup.nivel=nivel
 teacher.detail.table.grup.average=promedio
-teacher.detail.table.grup.video=total de v\u00EDdeos
+teacher.detail.table.grup.video=total de videos
 teacher.detail.table.grup.student=nombre de alumno
 teacher.detail.table.grup.platform.time=tiempo en plataforma
 teacher.detail.table.grup.footer.message=Total de videos: Numero total de videos asignados al alumno en su nivel actual. 
 #Tabla promedio-actividades
 teacher.detail.table.student.activities=actividades
 teacher.detail.table.student.average=Promedio:
-teacher.detail.table.student.average.video=sin v\u00EDdeos
+teacher.detail.table.student.average.video=sin videos
 teacher.detail.title=detalles grupo
 teacher.detail.no=N/A
 Etiquetas
