Cambio en el mensaje de ayuda en tabla coordinador, vista detalle-profesor.xhtml y se recibio la excepción java cuando un profesor no tiene licencia.

--- a/tecolotl-web/src/main/resources/coordinador.properties
+++ b/tecolotl-web/src/main/resources/coordinador.properties
@@ -36,7 +36,7 @@ teacher.detail.table.grup.average=promedio
 teacher.detail.table.grup.video=total de videos
 teacher.detail.table.grup.student=nombre de alumno
 teacher.detail.table.grup.platform.time=tiempo en plataforma
-teacher.detail.table.grup.footer.message=Total de videos: Numero total de videos asignados al alumno en su nivel actual. 
+teacher.detail.table.grup.footer.message=Total de videos: Numero total de videos asignados al alumno en su grupo actual. 
 #Tabla promedio-actividades
 teacher.detail.table.student.activities=actividades
 teacher.detail.table.student.average=Promedio:
