Traduccion Coordinador en index.xhtml.

--- a/tecolotl-web/src/main/resources/boton.properties
+++ b/tecolotl-web/src/main/resources/boton.properties
@@ -24,3 +24,6 @@ see.rating.details=watch scores
 close=close
 ready=ready!
 groups=grupos
+coordinator=coordinator
+students=students
+teachers=teachers
